Fix navbar alignment for small devices

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -72,7 +72,7 @@
 		font-size: 14px;
 	}
 
-	.row {
+	.container {
 		padding: 0;
 	}
 
@@ -125,9 +125,10 @@
 
 		.main-nav {
 			margin-top: 27px;
+			text-align: center;
 
 			& li {
-				margin-left: 8px;
+				margin: 8px;
 			}
 		}
 	}
